--- a/desafios/Expropostocap021 - tabelas/tabela01.html
+++ b/desafios/Expropostocap021 - tabelas/tabela01.html
@@ -11,7 +11,9 @@
         }
 
         table{
-            width: 300px;
+            width: 300px; 
+            height: 200px; 
+            border-collapse: collapse;
 
         }
 
@@ -19,7 +21,11 @@
             border: 1px solid black;
             padding: 10px;
             text-align: center;
+            border-radius: 10px;
+        }
 
+        td:hover{
+            background-color: yellow;
         }
     </style>
 </head>
