--- a/desafios/Expropostocap021 - tabelas/tabela02.html
+++ b/desafios/Expropostocap021 - tabelas/tabela02.html
@@ -12,14 +12,20 @@
 
         table{
             width: 300px;  
-            height: 200px;  
+            height: 200px; 
+            border-spacing: 5px;
         }
 
         td{
             border: 1px solid black;
             padding: 10px;
             text-align: center;
+            border-radius: 10px;
 
+        }
+
+        td:hover{
+            background-color: yellow;
         }
     </style>
 </head>
