--- a/desafios/Expropostocap021 - tabelas/tabela01.html
+++ b/desafios/Expropostocap021 - tabelas/tabela01.html
@@ -21,11 +21,16 @@
             border: 1px solid black;
             padding: 10px;
             text-align: center;
-            border-radius: 10px;
+
         }
 
         td:hover{
             background-color: yellow;
+            cursor: pointer;
+        }
+
+        td:active{
+            transform: scale(85%);
         }
     </style>
 </head>
