--- a/Exercicios/Ex024-iframe/pag001.html
+++ b/Exercicios/Ex024-iframe/pag001.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas Responsivas</title>
+    <title>Site de Teste</title>
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-
+            background-color: lightgray;
+            color: white;
         }
 
         table{
@@ -28,15 +29,20 @@
         tr:nth-child(even){
             background-color: gray;
         }
-            
+
+        tr:nth-child(odd){
+            background-color: white;
+            color: black;
+
+        }
+
         #container{
             overflow-x: auto;
         }
     </style>
+    </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nisi architecto dolor minima officiis quibusdam maxime voluptatibus veniam obcaecati doloribus laboriosam consequuntur, ea autem magnam, illum quia odit. Id, officiis.</p>
     <div id="container">
         <table>
             <caption>Tabelas responsivas</caption>
