--- a/Exercicios/Ex024-iframe/iframe002.html
+++ b/Exercicios/Ex024-iframe/iframe002.html
@@ -23,7 +23,10 @@
    <h1>Teste com iframe</h1> 
    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis eum nam alias enim maxime atque, vel libero quia cupiditate reprehenderit facilis asperiores exercitationem nostrum vitae corrupti hic voluptatem deleniti sequi?</p>
 
-   <iframe src="pag001.html" frameborder="0" width="500px" height="500px"></iframe>
+   <iframe src="paginasextras/pag001.html" frameborder="0" width="500px" height="500px">
+    <p>Infelizmente seu navegador não é compatível com isso</p>
+
+   </iframe>
 
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem, dolorem assumenda odio consectetur sint perspiciatis non rerum eius libero fugit quibusdam, commodi doloribus doloremque vitae tempora sunt quos architecto consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis autem neque placeat deserunt quo dolorem rerum fugit consectetur pariatur inventore et saepe cumque ducimus, assumenda dolor aut minus dolores alias. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, molestiae, eius nemo perspiciatis voluptas nostrum reiciendis blanditiis magni, ad et temporibus optio vero. Qui suscipit minus consectetur est excepturi labore!</p>
     
