--- a/Exercicios/Ex026-media queries/mq004/index.html
+++ b/Exercicios/Ex026-media queries/mq004/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Firts</title>
+    <link rel="stylesheet" href="estilo/style.css" media="all"> 
+    <link rel="stylesheet" href="estilo/media">
 </head>
 <body>
     
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="Acessando via smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acessando via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Versão para impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="Acessando via pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="Acessando via tv">
+    </main>
 </body>
 </html>
