--- a/Exercicios/Ex025-formularios/form007.html
+++ b/Exercicios/Ex025-formularios/form007.html
@@ -30,7 +30,7 @@
 
         <p>
             <label for="iprof">Profissão</label>
-            <input type="text" name="profissao" id="iprof" list="lstprof"> <!--Podemos criar uma "lista" também usando o input, basta criar um "datalist" e colocar as opções, dar um nome para o id e na tag input colocar a tag "list" e o nome do id(datalist). Qual a diferença entre fazer deste modo e o select, no select você apenas pode selecionar o que está esntre as opções, no input a lista é apenas uma sugestão de opção viável, mas se o assunto do seu interesse não está entre as opções sugeridas você consegue escrever, diferente so select -->
+            <input type="text" name="profissao" id="iprof" list="lstprof"> <!--Podemos criar uma "lista" também usando o input, basta criar um "datalist" e colocar as opções, dar um nome para o id e na tag input colocar a tag "list" e o nome do id(datalist). Qual a diferença entre fazer deste modo e o select, no select você apenas pode selecionar o que está entre as opções, no input a lista é apenas uma sugestão de opção viável, mas se o assunto do seu interesse não está entre as opções sugeridas você consegue escrever, diferente so select -->
             <datalist id="lstprof">
                 <option value="ADM">Administação</option>
                 <option value="CONT">Contador</option>
