--- a/Exercicios/Ex027-flexbox/flex002/index.html
+++ b/Exercicios/Ex027-flexbox/flex002/index.html
@@ -8,13 +8,14 @@
         div.container{
             background-color: salmon;
             display: flex;
+            flex-direction: column;
         }
 
         div.item{
             background-color: lightblue;
             border: 1px solid black;
-            flex: auto;
             text-align: center;
+            padding: 10px;
         }
     </style>
 </head>
